<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo">

    <EditText
        android:id="@+id/server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/server"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:backgroundTint="#f2f2f2"
        android:layout_marginBottom="17dp"
        android:layout_above="@+id/port"
        android:layout_alignStart="@+id/port"
        android:layout_alignEnd="@+id/topic" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/port"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:backgroundTint="#f2f2f2"
        android:layout_above="@+id/topic"
        android:layout_alignStart="@+id/topic"
        android:layout_marginBottom="12dp"
        android:layout_alignEnd="@+id/topic" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:gravity="center"
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:clickable="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_alignStart="@+id/password"
        android:layout_alignEnd="@+id/password" />

    <EditText
        android:id="@+id/topic"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/topic"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:backgroundTint="#f2f2f2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:backgroundTint="#f2f2f2"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/topic"
        android:layout_alignStart="@+id/topic" />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:backgroundTint="#f2f2f2"
        android:layout_below="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverConfig"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        android:layout_alignStart="@+id/server"
        android:layout_alignEnd="@+id/server" />
</RelativeLayout>